feat: Change some color to the color on logo

--- a/src/assets/element-variables.scss
+++ b/src/assets/element-variables.scss
@@ -4,6 +4,9 @@
     "primary": (
       "base": #54b9ac,
     ),
+    "warning": (
+      "base": #EED486,
+    ),
   )
 );
 @use "element-plus/theme-chalk/src/index.scss" as *;
